--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,5 +1,19 @@
 {
   "mail": {
-    "new": "test-ru"
+    "repeat-sending": "Отправить новое сообщение",
+    "sended-successfully":"Сообщение пользователю {{username}} было успешно отправлено",
+    "send-form":{
+      "name":"Логин",
+      "email":"Адрес электронной почты",
+      "validate":"Создать пользователя"
+    }
+  },
+  "user-verify":{
+    "success":"Пользователь {{username}} был успешно подтверждён"
+  },
+  "error-box":{
+    "title":"Произошла ошибка при отправке письма пользователю",
+    "error":"Ошибка: {{error}}",
+    "username":"Логин: {{username}}"
   }
 }
