--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,19 +1,24 @@
 {
-  "mail": {
-    "repeat-sending": "Отправить новое сообщение",
-    "sended-successfully":"Сообщение пользователю {{username}} было успешно отправлено",
-    "send-form":{
-      "name":"Логин",
-      "email":"Адрес электронной почты",
-      "validate":"Создать пользователя"
+  "errors":{
+    "title":"Извините, произошла ошибка",
+    "server":"Внутренняя ошибка сервера",
+    "username":"Введите корректный логин",
+    "email":"Введите корректный электронный адрес почты",
+    "userdata":"Введите корректные данные пользователя"
+  },
+  "success":{
+    "send-email":"Сообщение пользователю {{username}} было успешно отправлено",
+    "verified":"Пользователь {{username}} был успешно подтверждён"
+  },
+  "form":{
+    "title":"Введите ваши данные",
+    "labels":{
+      "username":"Логин",
+      "email":"Адрес электронной почты"
     }
   },
-  "user-verify":{
-    "success":"Пользователь {{username}} был успешно подтверждён"
-  },
-  "error-box":{
-    "title":"Произошла ошибка при отправке письма пользователю",
-    "error":"Ошибка: {{error}}",
-    "username":"Логин: {{username}}"
+  "buttons":{
+    "send-new":"Отправить новое сообщение",
+    "validate":"Подтвердить пользователя"
   }
 }
