--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -4,7 +4,8 @@
     "server":"Внутренняя ошибка сервера",
     "username":"Введите корректный логин",
     "email":"Введите корректный электронный адрес почты",
-    "userdata":"Введите корректные данные пользователя"
+    "userdata":"Введите корректные данные пользователя",
+    "error-type-label":"Тип ошибки"
   },
   "success":{
     "send-email":"Сообщение пользователю {{username}} было успешно отправлено",
