--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -21,5 +21,18 @@
   "buttons":{
     "send-new":"Отправить новое сообщение",
     "validate":"Подтвердить пользователя"
+  },
+  "validation-errors":{
+    "username":{
+      "short":"Логин должен содержать больше символов",
+      "long":"Логин должен содержать меньше символов",
+      "required":"Логин это обязательное поле"
+    },
+    "email":{
+      "short":"Адрес должен содержать больше символов",
+      "long":"Адрес должен содержать меньше символов",
+      "email":"Неверный адрес электронной почты",
+      "required":"Адрес это обязательное поле"
+    }
   }
 }
